Add jdk25-preview version suffix, installation docs, and release infrastructure
Rename version from 0.3.0 to 0.3.0-jdk25-preview to signal that
bytecode requires JDK 25 with --enable-preview and jdk.incubator.vector.
Add Installation section to README with Maven/Gradle snippets.
Add release profile (source, javadoc, GPG, Central Portal) to parent POM,
deploy-skip for bench/examples, flatten plugin, and updated CI workflow.